# eigen-layer-monorepo

./: .env  .gitignore  .sops.yaml  Makefile
.github/workflows/: stash-rollup-dev.yml
avs-aggregator/: aggregator.go  rpc_server.go
avs-aggregator/bindings/FinalizerServiceManager/: binding.go
avs-aggregator/bindings/FinalizerTaskManager/: binding.go
avs-aggregator/bindings/GaspMultiRollupService/: binding.go
avs-aggregator/core/: utils.go
avs-aggregator/core/chainio/: gen.go
avs-finalizer/: Cargo.toml
avs-finalizer/bindings/src/: finalizer_service_manager.rs  finalizer_task_manager.rs  (+5 more)
avs-finalizer/src/: operator.rs  rpc.rs
avs-finalizer/tests/: operatorUtilities.ts
cli/actions/: deposit_into_strategy.go  print_operator_status.go  register_operator_pubkeys.go  register_operator_with_avs.go  register_operator_with_eigenlayer.go
config-files/: operator.anvil.yaml
contracts/: compose.yml  generate-go-bindings.sh
contracts/src/: FinalizerTaskManager.sol  IFinalizerTaskManager.sol  IIncredibleSquaringTaskManager.sol  IncredibleSquaringTaskManager.sol
operator/: Cargo.toml
operator-go/: gen.go  operator_test.go
operator-go/cmd/: main.go
operator-go/mocks/: rpc_client.go
operator/src/: lib.rs  operator.rs
ops/helmfiles/: README.md
rolldown-contract/: Makefile  deployed-contracts.json
rolldown-contract/script/: rolldown.s.sol
rollup-updater/: env  package-lock.json  package.json
rollup-updater/src/: FinalizerTaskManager.json  Rolldown.json  index.ts
stash/: rollup-dev.enc.env
tests/integration/: integration_test.go
(+3 files in other folders)
