[workspace]
members = [
    "bindings",
]

[package]
name = "operator"
version = "0.1.0"
edition = "2021"

[dependencies]
bindings = { path = "./bindings" }

clap = { version = "4.4.8", features = ["derive"] }
ethers = { version = "2.0", features = ["rustls", "ws"] }
eyre = "0.6.8"
serde = { version = "1.0.192", features = ["derive"] }
serde_yaml = "0.9.27"
tokio = { version = "1.34.0", features = ["full"] }
